# jazzlights

./: .clang-format  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  atom_matrix_partition_table.csv  bitbucket-pipelines.yml  build_cmake.py  build_projectm.py  caboose.txt  check_format.sh  compare_sdkconfig.py  core_partition_table.csv  dfplayer.desktop  install-deps.py  jazzlights.code-workspace  library.properties  make_all.py  multiflash.py  platformio.ini  pyproject.toml  rebuild-env.py  sdkconfig.atom_matrix_default20221013  sdkconfig.atom_matrix_instrumentation  sdkconfig.atom_matrix_robot_instrumentation  sdkconfig.defaults  sdkconfig.gauntlet_espidf  sdkconfig.instrumentation.defaults  sdkconfig.iram.defaults  sdkconfig.vest_espidf  (+9 more)
.cargo/: config
.github/workflows/: extras.yml  format.yml  jazzlights.yml  pages.yml  platformio.yml  setup-platformio.yml  tglight.yml
artwork/: dfplayer-logo.psd
clips/: about.txt
demo/: demo.cpp
dfplayer/: Dorsal4Short8Long_Aug19.dxf  __init__.py  asoundrc  asoundrc.sample  effect.py  frame_source.py  input_alsa.cc  input_alsa.h  kinect.cc  kinect.h  layout.dxf  layout3.dxf  layout3_9x50.dxf  mock_player.py  player.py  preprocess.py  renderer.i  stats.py  tcl_layout.py  tcl_renderer.cc  tcl_renderer.h  tcl_renderer.i  tcl_renderer.py  tcl_renderer_py.py  test.py  util.py  utils.cc  utils.h  visualizer.cc  visualizer.h  visualizer.i
dfplayer/conf/: mpd.cfg  nginx_vhost.cfg
dfplayer/effects/: __init__.py  blink.py  chameleon.py  flick.py  indicator.py  randompixels.py  solidcolor.py  teststripes.py  textticker.py
dfplayer/templates/: index.html
dfplayer/ui_browser/: __init__.py
dfplayer/ui_desktop/: __init__.py
dfplayer/ui_gtk/: __init__.py
dfplayer/ui_web/: __init__.py
docs/: ALSA project - plugins.html  Asoundrc - AlsaProject.html
docs/ALSA project - plugins_files/: search.js
docs/Asoundrc - AlsaProject_files/: api.js  cb=gapi.loaded_1  fastbutton.html  load(1).php  load(2).php  load(3).php  load(4).php  load(5).php  load.php  plusone.js  postmessageRelay.html
etc/: caboose-layout.py  gen-layout.py  get-layout.py  tglight-from-robot.toml  tglight-test.toml  tglight.service.conf  tglight.toml  tglight_deploy_id_rsa.pub
etc/caboose/: pixel.rc
etc/other/: pixel.rc  rpi-setup.sh
etc/ppcfg-caboose/: pixel-bad.rc  pixel.rc
etc/ppcfg-robot/: pixel.rc
etc/robot/: pixel.rc  tglight.toml
examples/Ring/: Ring.ino
examples/Vest/: Vest.ino
extras/: CMakeLists.txt  Dockerfile  README.md  demo.cpp  dfsparks-test-client.py  dfsparks-test-server.py  extras.h  install-dependencies  test-client.py  test-server.py  unisparks.hpp
extras/bench/: main.cpp
extras/demo/: glrenderer.cpp  glrenderer.h  glrenderer.hpp  gui.cpp  gui.h  gui.hpp  loader.cpp  loader.hpp  main.cpp  matrix.toml  overlays.cpp  ring.toml
extras/docs/: VEST.md
extras/docs/images/: vestwiring.html
extras/flash-esp-from-web/: index.html  manifest.json  manifest.py  merge-bin.py  style.css
extras/flash-esp-from-web/esp-web-tools/: index-BbuTar3J.js  install-button.js  install-dialog-BWZCBYvU.js
extras/home-assistant/: README.md
extras/home-assistant/jazzlights/: __init__.py  config_flow.py  const.py  light.py  manifest.json  resolve_mdns.py  websocket.py
extras/jazzlights/effects/: pixeltest.hpp
extras/jazzlights/networks/: udp.cpp  udp.h  udp.hpp
extras/jazzlights/util/: cpptoml.h  cpptoml.hpp  loader.cpp  loader.h  loader.hpp  stdlog.cpp  stdtime.cpp
extras/led_bench/: main.cpp
extras/scripts/: capt-hat-layout.py  cloud_client.py  clouds-layout.py  debugcaboose.py  footlayout.py  hat-layout.py  mapper.py  multiflash.py  receiver.py  resolve_mdns.py  rest.py  sender.py  setup-arduino.sh  setup-devenv.sh  sleep_post_upload.py  slimDNS.py  stafflayout.py  vestlayout.py  warm.py  websocket.py
extras/site/: create-html.py  style.css  template.html
extras/site/flash/: index.html  manifest.py  merge-bin.py
extras/site/flash/esp-web-tools/: README.md  styles-ChWDJ3ue.js
extras/tests/: catch.hpp  player.cpp
extras/unisparks/effects/: pixeltest.hpp  scrolltext.hpp
extras/unisparks/networks/: udp.cpp  udp.hpp
extras/unisparks/renderers/: opengl.hpp
extras/unisparks/util/: cpptoml.hpp  geom3d.hpp  loader.cpp  loader.hpp  log.cpp  stdtime.cpp  time.cpp
partitions/: ESP32_32MB.csv  ESP32_4MB_64KB_FS_noOTA.csv  partitions-16MB_spiffs-tinyuf2.csv  partitions-4MB_spiffs-tinyuf2.csv  partitions-8MB_spiffs-tinyuf2.csv
presets/: Aderrasi - Chromatic Abyss (The Other Side).milk
src/: DFSparks.h  Jazzlights.h  Unisparks.h  demo.cpp  demo.py  loader.cpp  loader.hpp  main.cpp  main.rs  run.cpp  tgloader.cpp
src/DFSparks/: DFSParks_Effect_Flame.cpp  DFSParks_Effect_Flame.h  DFSParks_Network.cpp  DFSParks_Timer.cpp  DFSparks.h  DFSparks_Color.cpp  DFSparks_Color.h  DFSparks_Effect.h  DFSparks_Effect_Blink.h  DFSparks_Effect_Flame.cpp  DFSparks_Effect_Flame.h  DFSparks_Effect_Plasma.h  DFSparks_Effect_Rainbow.h  DFSparks_Effect_Rider.h  DFSparks_Effect_Threesine.h  DFSparks_Effects.cpp  DFSparks_Effects.h  DFSparks_Log.cpp  DFSparks_Log.h  DFSparks_Math.cpp  DFSparks_Math.h  DFSparks_Network.h  DFSparks_Palette.cpp  DFSparks_Pixels.h  DFSparks_Player.h  DFSparks_Timer.h
src/Demo/: main.cpp  ui.cpp  ui.h
src/arduinolib/: DiscoFish_Color.h  DiscoFish_LightStrand.h  DiscoFish_WearableProtocol.h
src/demo/: client.cpp  client.h  demo.cpp  effect.h  main.cpp  server.cpp  server.h  socket.cpp  socket.h  task.h  ui.cpp  ui.h
src/dfsparks/: color.cpp  color.h  effect.cpp  effect.h  effects.cpp  effects.h  log.cpp  log.h  math.cpp  math.h  network.cpp  network.h  pixels.h  player.cpp  player.h  playlist.cpp  playlist.h  timer.cpp  timer.h
src/effects/: fishify.cc  fishify.h  passthrough.cc  passthrough.h  rainbow.cc  rainbow.h  wearable.cc  (+1 more)
test/: unity_config.h
tests/: test_color.cpp  test_protocol.cpp
tglight/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
tools/: array_perf.py
(+516 files in other folders)
