[package]
name = "tglight"
version = "0.2.1"
authors = ["Dmitry Azovtsev <dmitry@azovtsev.com>"]

[dependencies]
ansi_term = "0.11.0"
atty = "0.2.10"
clap = "2"
log = { version = "0.4.1", features = ['std'] }
time = "0.1.40"
walkdir = "2"
ws = "0.7.6"
libc = "*"
toml = "0.4"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.11"

[profile.dev]
rpath = true